Board alignment fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 #toc{
   margin-top: 3em;
-  background: #b5b7b1;
+  background: #e0e2dc;
 }
 
 .pre-scrollable {
