--- a/src/app/capture/capture.component.css
+++ b/src/app/capture/capture.component.css
@@ -1,7 +1,6 @@
 #board{
-  margin:auto;
-  width: 40%;
   padding-bottom: 3em;
+  margin: auto;
 }
 
 h4{
@@ -9,9 +8,8 @@ h4{
 }
 
 #control{
-  margin:auto;
-  margin-right: 10em;
-  margin-bottom: 2em;
+  margin: auto;
+  margin-bottom: 1em;
 }
 
 #instructions{
