--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 body{
-  background: #b5b7b1;
+  background: #e0e2dc;
 }
